# dotfiles

./: .Xmodmap  .Xresources  .chezmoi.yaml.tmpl  .chezmoiexternal.toml  .chezmoiignore  .config  .curlrc  .dircolors  .editorconfig  .gitattributes  .gitconfig  .gitignore  .gitignore_global  .gitlint  .gitmodules  .gtkrc-2.0  .mackup.cfg  .mpdconf  .offlineimaprc  .pre-commit-config.yaml  .projectile  .tmux.conf  .tmux_line  .travis.yml  .vimrc  .xinitrc  .xsession  .zlogin  .zpreztorc  .zshenv  .zshrc  Aurfile  Brewfile  Brewfile.lock.json  CHANGELOG.md  COMMANDS.org  Dockerfile  LICENSE  LICENSE.md  Makefile  (+44 more)
.bin/: geoip  get-currency  lock.sh  offlineimap.py  start_ipython_notebook.sh  torswitch  xfce4_showdesktop  zsh-battery
.chezmoitemplates/: ignore_linux.tmpl  ignore_secrets.tmpl
.chglog/: config.yml
.content/: _index.md  _index.org
.emacs.d/: Cask  emacs.el  init.el
.gnupg/: gpg-agent.conf  gpg.conf
.mackup/: bin.cfg  dircolors.cfg  dunst.cfg  editorconfig.cfg  emacs.cfg  git.cfg  gnupg.cfg  gtk.cfg  i3.cfg  ipython.cfg  mpd.cfg  mutt.cfg  python.cfg  ranger.cfg  shell.cfg  sxhkdrc.cfg  systemd.cfg  termite.cfg  tmux.cfg  vim.cfg  weechat.cfg  x11.cfg  xfce4-terminal.cfg  ycm.cfg  zsh.cfg
.mutt/: mailcap  monokai.colors  muttrc
.ncmpcpp/: config
.shell/: aliases  common  detect-os  utils
.vim/: plugins.vim  vimrc
.weechat/: buffers.conf  irc.conf  logger.conf  plugins.conf  relay.conf  weechat.conf
.zsh/: funcs.zsh  utils.zsh
X/: .Xresources  .xinitrc
bootstrap/: aur  aur-packages  brewit.sh  ca-certificates.crt  git_packages.sh  osx.sh  (+4 more)
(+676 files in other folders)
